1) fix bug with calculate delinquent validator apy; 2) added annotation to requests.
