# docs/swagger.json
@@ -1,18 +1,30 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        }
     },
     "basePath": "/v1",
     "paths": {
         "/coins": {
             "get": {
-                "description": "get coins",
+                "description": "The information on tokens with the specified search parameters.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "coin"
                 ],
                 "summary": "RestAPI",
                 "parameters": [
@@ -90,12 +102,15 @@
         },
         "/epoch": {
             "get": {
-                "description": "get epoch",
+                "description": "The current epoch value is returned.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "epoch"
                 ],
                 "summary": "RestAPI",
                 "responses": {
@@ -152,6 +167,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "governance"
                 ],
                 "summary": "RestAPI",
                 "parameters": [
@@ -247,12 +265,15 @@
         },
         "/pool-coins": {
             "get": {
-                "description": "get pools coins",
+                "description": "The information about pool tokens with the specified search parameters.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "coin"
                 ],
                 "summary": "RestAPI",
                 "parameters": [
@@ -348,19 +369,22 @@
         },
         "/pool-statistic": {
             "get": {
-                "description": "get statistic by pool",
+                "description": "The pool statistic for the specified aggregation.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "pool"
+                ],
                 "summary": "RestAPI",
                 "parameters": [
                     {
                         "type": "string",
-                        "default": "Marinade",
-                        "description": "pool name",
+                        "default": "EverSOL",
+                        "description": "Name of the pool with strict observance of the case.",
                         "name": "name",
                         "in": "query",
                         "required": true
@@ -374,7 +398,7 @@
                             "year"
                         ],
                         "type": "string",
-                        "description": "aggregation",
+                        "description": "Type of data aggregation for a time period",
                         "name": "aggregation",
                         "in": "query",
                         "required": true
@@ -431,18 +455,21 @@
         },
         "/pool-validators/{name}": {
             "get": {
-                "description": "get pool validators",
+                "description": "This list with pool's validators.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "validator"
+                ],
                 "summary": "RestAPI",
                 "parameters": [
                     {
                         "type": "string",
-                        "default": "Marinade",
+                        "default": "EverSOL",
                         "description": "Pool name",
                         "name": "name",
                         "in": "path",
@@ -545,19 +572,22 @@
         },
         "/pool/{name}": {
             "get": {
-                "description": "get pool",
+                "description": "Creates a WS request to get server data for the pool with the pool name specified in the request.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "pool"
+                ],
                 "summary": "WebSocket",
                 "parameters": [
                     {
                         "type": "string",
-                        "default": "Marinade",
-                        "description": "Pool name",
+                        "default": "EverSOL",
+                        "description": "Name of the pool with strict observance of the case.",
                         "name": "name",
                         "in": "path",
                         "required": true
@@ -611,18 +641,21 @@
         },
         "/pools": {
             "get": {
-                "description": "get pools",
+                "description": "This Pools list with ability to sort \u0026 search by name.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "pool"
+                ],
                 "summary": "RestAPI",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "stake-pool name",
+                        "description": "The name of the pool without strict observance of the case.",
                         "name": "name",
                         "in": "query"
                     },
@@ -637,14 +670,14 @@
                         ],
                         "type": "string",
                         "default": "apy",
-                        "description": "sort param",
+                        "description": "The parameter by the value of which the pools will be sorted.",
                         "name": "sort",
                         "in": "query"
                     },
                     {
                         "type": "boolean",
                         "default": true,
-                        "description": "desc",
+                        "description": "Sort in descending order",
                         "name": "desc",
                         "in": "query"
                     },
@@ -716,12 +749,15 @@
         },
         "/pools-statistic": {
             "get": {
-                "description": "get statistic",
+                "description": "Creates a WS request to get current statistics.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "pool"
                 ],
                 "summary": "WebSocket",
                 "responses": {
@@ -1132,5 +1168,8 @@
                 }
             }
         }
+    },
+    "x-extension-openapi": {
+        "example": "value on a json format"
     }
 }
